2006-03-29  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpparamspecs.[ch]: added GimpParamSpecEnum, which is
	a GParamSpecEnum plus the possibility to exclude values.
	Fixed lots of validation functions.
	Made all structs and macros public.

2006-03-29  Michael Natterer  <mitch@gimp.org>

	* app/pdb/procedural_db.c (procedural_db_init_proc): switch to
	g_return_val_if_fail() because it got a return value.

2006-03-29  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/fileops.pdb (file_save): pass the filename, not
	a GimpImage to file_utils_filename_to_uri(). Fixes bug #336527.

	* app/pdb/fileops_cmds.c: regenerated.

2006-03-29  Sven Neumann  <sven@gimp.org>

	* desktop/gimp.desktop.in.in: dropped the extension from the icon
	name (bug #336498).

2006-03-29  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/drawable.pdb (drawable_type_with_alpha): fixed
	forgotten antique enum values (RGBA_GIMAGE -> GIMP_RGB_IMAGE etc.)

	* app/pdb/drawable_cmds.c: regenerated.

2006-03-29  Michael Natterer  <mitch@gimp.org>

	* app/pdb/procedural_db.[ch] (procedural_db_init_proc): return the
	procedure.

	* tools/pdbgen/app.pl: use a local ProcRecord* variable so the
	generated code becomes more readable.

	* app/pdb/*_cmds.c: regenerated.

2006-03-29  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimp.c (gimp_run_procedure2): add newline to g_printerr().

2006-03-29  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/Makefile.am: added an explicit dependency to
	force creation of gimp-wilber-pixbufs.h.

2006-03-29  Sven Neumann  <sven@gimp.org>

	* desktop/Makefile.am
	* desktop/gimp.png: removed.

	* desktop/16x16/gimp.png
	* desktop/22x22/gimp.png
	* desktop/24x24/gimp.png
	* desktop/32x32/gimp.png
	* desktop/48x48/gimp.png
	* desktop/64x64/gimp.png
	* desktop/scalable/gimp.svg: new application icons in different
	sizes, contributed by Jakub Steiner.

	* themes/Default/images/Makefile.am
	* themes/Default/images/stock-wilber-32.png